--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,2 @@
-
+url: 'https://zengxianyu.github.io/sketchedit/' # your main domain
+baseurl: '' # if you're using custom domain keep this blank example: baseurl: ''
